--- a/src/pages/bio.astro
+++ b/src/pages/bio.astro
@@ -3,4 +3,6 @@ import Main from "../layouts/Main.astro";
 import { siteMetadata } from "../siteMetadata";
 ---
 
-<Main title={`${siteMetadata.title} → bio`} last_modified="1734771487"></Main>
+<Main title={`${siteMetadata.title} → Bio`} last_modified="1734771487">
+    <h2>About Daniele D'Agnelli</h2>
+</Main>
