--- a/src/pages/bio.astro
+++ b/src/pages/bio.astro
@@ -5,4 +5,16 @@ import { siteMetadata } from "../siteMetadata";
 
 <Main title={`${siteMetadata.title} → Bio`} last_modified="1734771487">
     <h2>About Daniele D'Agnelli</h2>
+    <hr />
+    <p class="quote"></p>
 </Main>
+
+<style>
+    hr {
+        border: none; /* Removes default border */
+        height: 0.01em; /* Smallest possible line */
+        background-color: var(--text-color); /* Green color */
+        width: 80%; /* 80% of the container width */
+        margin: 0 auto; /* Center the line horizontally */
+    }
+</style>
